Fixing according to answer to this post : https://stackoverflow.com/questions/47503046/error-creating-bean-with-name-entitymanagerfactory-when-add-spring-boot-jpa-d://stackoverflow.com/questions/47503046/error-creating-bean-with-name-entitymanagerfactory-when-add-spring-boot-jpa-de

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,16 @@ server.port=9000
 
 # configure postgresql
 spring.datasource.platform=postgres
-spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
  
- 
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.ddl-auto=none
 
 
