--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
  
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.ddl-auto=none
